# slm-policy-optimization

./: .gitignore  LICENSE  README.md  eval.sh  pyproject.toml  run_train.sh
recipes/: grpo.yaml  gspo.yaml  gspo_modal.yaml  gtpo.yaml
src/open_r1/: config.py  grpo.py  gspo.py  gtpo.py  gtpo_trainer.py  introspect.py  main.py  rewards.py  train_modal.py
src/open_r1/utils/: model_utils.py
tests/: gtpo_test.py
