[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-r1"
version = "0.1.0.dev0"
description = "Open R1"
readme = "README.md"
requires-python = "==3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "The Hugging Face team (past and future)", email = "lewis@huggingface.co" },
]
keywords = ["llm", "inference-time", "compute", "reasoning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "accelerate==1.4.0",
  "bitsandbytes>=0.43.0",
  "einops>=0.8.0",
  "datasets>=3.2.0",
  "deepspeed==0.15.4",
  "hf_transfer>=0.1.4",
  "huggingface-hub[cli]>=0.19.2,<1.0",
  "langdetect",
  "latex2sympy2_extended>=1.0.6",
  "math-verify==0.5.2",
  "liger_kernel==0.5.3",
  "packaging>=23.0",
  "safetensors>=0.3.3",
  "sentencepiece>=0.1.99",
  "transformers==4.49.0",
  "trl @ git+https://github.com/huggingface/trl.git@69ad852e5654a77f1695eb4c608906fe0c7e8624",
  "wandb>=0.19.1",
]

[project.optional-dependencies]
tests = [
  "pytest",
  "parameterized>=0.9.0",
  "math-verify==0.5.2",
]
torch = [
  "torch==2.5.1",
]
quality = [
  "ruff>=0.9.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
]
code = [
  "e2b-code-interpreter>=1.0.5",
  "python-dotenv",
]
eval = [
  "lighteval @ git+https://github.com/huggingface/lighteval.git@ed084813e0bd12d82a06d9f913291fdbee774905",
  "math-verify==0.5.2",
]
dev = [
  "ruff>=0.9.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "pytest",
  "parameterized>=0.9.0",
  "math-verify==0.5.2",
  "lighteval @ git+https://github.com/huggingface/lighteval.git@ed084813e0bd12d82a06d9f913291fdbee774905",
]
distilabel = [
  "distilabel[vllm,ray,openai]>=1.5.2",
]
peft = [
  "peft>=0.14.0",
]
vllm = [
  "vllm==0.7.2",
]
all = [
  "accelerate==1.4.0",
  "bitsandbytes>=0.43.0",
  "datasets>=3.2.0",
  "deepspeed==0.15.4",
  "distilabel[vllm,ray,openai]>=1.5.2",
  "e2b-code-interpreter>=1.0.5",
  "einops>=0.8.0",
  "flake8>=6.0.0",
  "hf_transfer>=0.1.4",
  "huggingface-hub[cli]>=0.19.2,<1.0",
  "isort>=5.12.0",
  "langdetect",
  "latex2sympy2_extended>=1.0.6",
  "liger_kernel==0.5.3",
  "lighteval @ git+https://github.com/huggingface/lighteval.git@ed084813e0bd12d82a06d9f913291fdbee774905",
  "math-verify==0.5.2",
  "packaging>=23.0",
  "parameterized>=0.9.0",
  "peft>=0.14.0",
  "pytest",
  "python-dotenv",
  "ruff>=0.9.0",
  "safetensors>=0.3.3",
  "sentencepiece>=0.1.99",
  "torch==2.5.1",
  "transformers==4.49.0",
  "trl @ git+https://github.com/huggingface/trl.git@69ad852e5654a77f1695eb4c608906fe0c7e8624",
  "vllm==0.7.2",
  "wandb>=0.19.1",
]

[project.urls]
Homepage = "https://github.com/huggingface/open-r1"

[tool.setuptools]
package-dir = { "" = "src" }
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
