[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-r1"
version = "0.1.0.dev0"
description = "Open R1"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
keywords = ["llm", "inference-time", "compute", "reasoning"]
dependencies = [
  "accelerate>=1.4.0",
  "bitsandbytes>=0.43.0",
  "datasets>=3.2.0",
  "deepspeed>=0.15.4",
  "distilabel[vllm,ray,openai]>=1.5.2",
  "e2b-code-interpreter>=1.0.5",
  "einops>=0.8.0",
  "flake8>=6.0.0",
  "flash-attn>=2.7.0",
  "hf_transfer>=0.1.4",
  "huggingface-hub[cli]>=0.19.2,<1.0",
  "isort>=5.12.0",
  "langdetect",
  "latex2sympy2_extended>=1.0.6",
  "liger_kernel>=0.5.3",
  "math-verify>=0.5.2",
  "packaging>=23.0",
  "parameterized>=0.9.0",
  "peft>=0.14.0",
  "pytest",
  "python-dotenv",
  "ruff>=0.9.0",
  "safetensors>=0.3.3",
  "sentencepiece>=0.1.99",
  "torch>=2.7.0",
  "transformers>=4.49.0,<4.52.0",
  "trl>=0.15.0",
  "vllm>=0.7.2",
  "wandb>=0.19.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
constraint-dependencies = [
  "torch>=2.7.0",
]
no-build-package = ["outlines-core"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[tool.uv.extra-build-dependencies]
flash-attn = ["torch>=2.7.0", "setuptools", "wheel", "ninja"]

[tool.uv.extra-build-variables]
flash-attn = { MAX_JOBS = "32", NVCC_THREADS = "1", FLASH_ATTN_CUDA_ARCHS = "120" , CC = "clang", CXX = "clang++"}

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true